# ProcTools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
proctools/: __init__.py  bulk.py  communicate.py  credential.py  dataset.py  filesystem.py  manager.py  media.py  meta.py  metadata.py  misc.py  portal.py  transfer.py  value.py
proctools/templates/: batch_notification.html
